# fin_agents

./: .env.example  LICENSE  README.md  docker-compose.yml  pred_market_sights.md  pyproject.toml
agents/prediction_market_research_agent/: README.md  pyproject.toml
agents/prediction_market_research_agent/docs/: README.md  kalshi.md  polymarket.md
agents/prediction_market_research_agent/scripts/: install.sh  run_research.py
agents/prediction_market_research_agent/src/prediction_market_research_agent/: __init__.py  agent.py  cli.py  config.py
agents/prediction_market_research_agent/src/prediction_market_research_agent/clients/: __init__.py  adapter.py  clob.py  markets.py
agents/prediction_market_research_agent/src/prediction_market_research_agent/models/: __init__.py  market.py
agents/prediction_market_research_agent/tests/: test_clients.py
agents/prediction_market_signals_agent/: .gitignore  README.md  pyproject.toml
agents/prediction_market_signals_agent/config/: data_sources.yaml  prediction_market_signal_scoring.yaml  prediction_market_topics.yaml
agents/prediction_market_signals_agent/data/user_research/: README.md  user_view.md
agents/prediction_market_signals_agent/data/user_research/sources/: websites.yaml
agents/prediction_market_signals_agent/docs/: README.md
agents/prediction_market_signals_agent/docs/architecture/: pass7_improvements.md  prediction_market_signals.md
agents/prediction_market_signals_agent/docs/integrations/: kalshi.md  polymarket.md
agents/prediction_market_signals_agent/docs/prompts/: prediction_market_signal_analysis.md
agents/prediction_market_signals_agent/scripts/: install.sh  run_prediction_market_signals.py
agents/prediction_market_signals_agent/src/prediction_market_signals_agent/: __init__.py  config.py
agents/prediction_market_signals_agent/src/prediction_market_signals_agent/agents/: candidate_writer.py  deterministic_scoring_agent.py  llm_signal_analysis_agent.py  signal_listing_agent.py  synthesis_agent.py  user_research_agent.py
agents/prediction_market_signals_agent/src/prediction_market_signals_agent/algorithms/: __init__.py  base.py  cross_market_consistency.py  implied_probability.py  liquidity_score.py  market_relevance.py  probability_momentum.py  registry.py  signal_strength.py  spread_quality.py
agents/prediction_market_signals_agent/src/prediction_market_signals_agent/connectors/: __init__.py  base.py  kalshi.py  polymarket.py
agents/prediction_market_signals_agent/src/prediction_market_signals_agent/discovery/: market_discovery.py  query_builder.py  topic_taxonomy.py
agents/prediction_market_signals_agent/src/prediction_market_signals_agent/market_data/: __init__.py  adapter.py  client.py  clob.py  models.py
agents/prediction_market_signals_agent/src/prediction_market_signals_agent/pipeline/: run_signals_pipeline.py  state.py
agents/prediction_market_signals_agent/src/prediction_market_signals_agent/reporting/: markdown_renderer.py
agents/prediction_market_signals_agent/src/prediction_market_signals_agent/schemas/: __init__.py  adapter.py  market.py  signal.py  user_research.py
agents/prediction_market_signals_agent/src/prediction_market_signals_agent/storage/: duckdb_store.py  parquet_store.py  postgres_store.py  raw_payload_store.py
agents/prediction_market_signals_agent/tests/: test_algorithms.py  test_pipeline_offline.py
agents/prediction_market_signals_agent/tests/fixtures/prediction_markets/: offline_markets.json
libs/fin_agents_common/: README.md  pyproject.toml
libs/fin_agents_common/src/fin_agents_common/: __init__.py
libs/fin_agents_common/src/fin_agents_common/common/: __init__.py  config.py  errors.py  ids.py  (+1 more)
(+19 files in other folders)
