[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fin-agents"
version = "0.1.0"
description = "Multi-agent financial research framework"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["agents"]
pythonpath = ["agents/prediction_market_research_agent/src"]

[tool.ruff]
line-length = 100
target-version = "py311"
