[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prediction-market-signals-agent"
version = "0.1.0"
description = "Prediction market signal intelligence for capital markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "predmarket @ git+https://github.com/ashercn97/predmarket.git",
    "httpx>=0.28.1",
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "tenacity>=8.0",
    "jinja2>=3.1",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "litellm>=1.50.0",
]

[project.optional-dependencies]
llamaindex = ["llama-index-core>=0.11.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_market_signals_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
