[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fin-agents-common"
version = "0.1.0"
description = "Shared LLM and observability utilities for fin_agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "litellm>=1.50.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/fin_agents_common"]
